ft(notification-pane): add notification pane and functionaility [Start #168049948,#168049963]
 - register(sign-up): a user should be able to sign up
 - feat(user-login): add user login functionality
 - add social login and forgot password link to login form
 - feature(user-profile): add view and edit profile
 - user can view and edit his/her profile
 - ft(get-notifications): get users notifications
 - add redux
 - set up notifications with modal
 - add notification counter to display number of unread
 - remove notification from login header
 - add tests and rebase

--- a/src/components/home-nav/HomeNav.scss
+++ b/src/components/home-nav/HomeNav.scss
@@ -1,4 +1,4 @@
-@import '../../styles/App.scss';
+@import "../../styles/App.scss";
 
 /*home-nav styling*/
 
@@ -78,19 +78,44 @@
 .profile-name {
   color: #fff;
 }
-.hamburger-menu{
+.hamburger-menu {
   display: none;
   color: $background;
   margin-right: 10px;
   font-size: 1.3em;
   @media screen and (max-width: 480px) {
-    display: block!important;
-    &:hover{
-      .side-bar{
+    display: block !important;
+    &:hover {
+      .side-bar {
         display: block;
         position: absolute;
         width: 80%;
       }
     }
   }
+}
+
+// notification pane
+.notification {
+  background-color: $primaryColor;
+  color: white;
+  text-decoration: none;
+  padding: 13px 5px;
+  position: relative;
+  display: inline-block;
+  border-radius: 2px;
+}
+
+.notification:hover {
+  background: inherit;
+}
+
+.notification .badge {
+  position: absolute;
+  top: 5px;
+  right: -3px;
+  padding: 1px 4px;
+  border-radius: 50%;
+  color: white;
+  background-color: orange;
 }
