--- a/src/components/login-page/login.scss
+++ b/src/components/login-page/login.scss
@@ -1,3 +1,14 @@
+.container {
+  height: 100vh;
+  width: 100%;
+  background: url('../../assets/traveller.jpg') no-repeat center center fixed;
+  background-size: cover;
+  color: #0a0a0b;
+  display: flex;
+  justify-content: flex-start;
+  flex-direction: column;
+}
+
 .login-alt {
   width: 100%;
   text-align: center;
@@ -23,7 +34,7 @@
     width: 40px;
     cursor: pointer;
   }
-  
+
   .gmail {
     background: url('../../assets/images/socialMedia/gmail.svg');
   }
