--- a/src/styles/App.scss
+++ b/src/styles/App.scss
@@ -1,22 +1,37 @@
-.App {
-  text-align: center;
+@import url("https://fonts.googleapis.com/css?family=Roboto&display=swap");
+
+// resets
+* {
+  -webkit-box-sizing: border-box;
+  box-sizing: border-box;
+  margin: 0;
 }
 
-.App-logo {
-  height: 40vmin;
+// imports
+@import './footer';
+@import './helpers';
+@import './flexbox';
+@import './cssgrid';
+
+// common classes
+// clickable
+.clickable {
+  cursor: pointer;
+}
+// spacer
+.spacer {
+  flex-grow: 1;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+// bolder
+.b {
+  font-weight: bolder;
 }
 
-.App-link {
-  color: #09d3ac;
+.toastify-primary {
+  color: #fff;
+  background-color: $primaryColor;
+}
+.black {
+  color: #000;
 }
