ft(manage-request): as a user - I should be able to view my request - I should be able to edit them while they are still in a pending mode - I should be able to delete my request [Start #168049970 ]

--- a/src/components/input/input.scss
+++ b/src/components/input/input.scss
@@ -3,6 +3,7 @@
   margin: 0 auto;
   margin-top: 20px;
   text-align: left; // to align the label text to the left
+  margin-left: 20px;
   width: 200px;
   height: 40px;
 
