--- a/src/components/navbar/navbar.scss
+++ b/src/components/navbar/navbar.scss
@@ -7,6 +7,7 @@ ul {
   padding-bottom: 10px;
   overflow: hidden;
   background-color: white;
+  box-shadow: 2px 4px 8px 0px rgba(153, 153, 153, 0.5);
 
   .left {
     float: left;
