--- a/src/components/side-bar/sidebar.scss
+++ b/src/components/side-bar/sidebar.scss
@@ -1,58 +1,59 @@
 @import "../../styles/variables";
 
-.side-bar{
-    height: -webkit-fill-available;
-    display: flex;
-    float: left;
-    width: 20%;
-    background: #404E67;
-    color: $black;
-    @media screen and (max-width: 480px) {
-        display: none;
-      }
-    .main-nav{
-        background-color: inherit;
-        width: 100%;
-        padding: 20px 10px 0px 20px;
-        height: 100%;
-        font-family: $font-family;
-        color: white;
-        .nav-header{
-            margin: 10px 0px 30px 0px;
-            font-weight: bold;
-            font-size: 1.2em;
-        }
-        .nav-item{
-            margin: 10px 0px 10px 0px;
-            padding-left: 20px;
-            &:hover{
-                color: $primaryColor;
-                .sidebar-icons{
-                    color: $primaryColor;
-                }
-            }
-            a{
-                color: #fff;
-                border: none;
-                text-align: unset;
-                width: auto;
-                margin: 10px 0px 10px 0px;
-                padding-left: 20px;
-                &:hover {
-                    color: $primaryColor;
-                    background: inherit;
-                    cursor: pointer;
-                    transform: none;
-                    border: none;
-                    transition: none;
-                    box-shadow: none;
-                  }
-            }
-        }
+.side-bar {
+  height: -webkit-fill-available;
+  display: flex;
+  float: left;
+  width: 20%;
+  background: #404e67;
+  color: $black;
+  @media screen and (max-width: 480px) {
+    display: none;
+  }
+  .main-nav {
+    background-color: inherit;
+    width: 100%;
+    padding: 20px 10px 0px 20px;
+    height: 100%;
+    font-family: $font-family;
+    color: white;
+    box-shadow: none;
+    .nav-header {
+      margin: 10px 0px 30px 0px;
+      font-weight: bold;
+      font-size: 1.2em;
     }
+    .nav-item {
+      margin: 10px 0px 10px 0px;
+      padding-left: 20px;
+      &:hover {
+        color: $primaryColor;
+        .sidebar-icons {
+          color: $primaryColor;
+        }
+      }
+      a {
+        color: #fff;
+        border: none;
+        text-align: unset;
+        width: auto;
+        margin: 10px 0px 10px 0px;
+        padding-left: 20px;
+        &:hover {
+          color: $primaryColor;
+          background: inherit;
+          cursor: pointer;
+          transform: none;
+          border: none;
+          transition: none;
+          box-shadow: none;
+        }
+      }
+    }
+  }
 }
-.sidebar-icons{
-    color: $background;
-    margin-right: 10px;
-    font-size: 1.3em;
+.sidebar-icons {
+  color: $background;
+  margin-right: 10px;
+  font-size: 1.3em;
 }
