feature(approvals-table): Approvals Table [Start #168049950]

--- a/src/components/home-nav/HomeNav.scss
+++ b/src/components/home-nav/HomeNav.scss
@@ -78,3 +78,19 @@
 .profile-name {
   color: #fff;
 }
+.hamburger-menu{
+  display: none;
+  color: $background;
+  margin-right: 10px;
+  font-size: 1.3em;
+  @media screen and (max-width: 480px) {
+    display: block!important;
+    &:hover{
+      .side-bar{
+        display: block;
+        position: absolute;
+        width: 80%;
+      }
+    }
+  }
+}
