feat (request-action): add approve/reject functionality - add action confirmation modal
[Start #168049962, Start #168049953, Start #168049969, #168050023]

--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -11,3 +11,4 @@ $background: #fff;
 $box-shadow: 0 0.5rem 1rem rgba($black, 0.15) !default;
 $font-family: "Roboto", sans-serif;
 $border-color: rgb(124, 124, 124);
+$dangerColor: tomato;
