--- a/src/components/table/Table.scss
+++ b/src/components/table/Table.scss
@@ -143,24 +143,26 @@ a {
                 padding: 16px;
                 font-size: 16px;
                 border: none;
-                cursor: pointer;
+                cursor: normal;
               }
               .dropdown-content{
                 display: none;
                 position: absolute;
                 background-color: #f9f9f9;
-                min-width: 160px;
+                width: inherit;
                 box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
                 z-index: 1;
-                a{
-                  color: black;
-                  padding: 12px 16px;
-                  text-decoration: none;
-                  display: block;
-                  &:hover {
-                    background-color: #f1f1f1
-                  }
-                }
+                text-align: center;
+                // span{
+                //   color: black;
+                //   padding: 12px 16px;
+                //   text-decoration: none;
+                //   display: block;
+                //   cursor: pointer;
+                //   &:hover {
+                //     background-color: #f1f1f1;
+                //   }
+                // }
               }
             }
             .accept-request-btn {
