--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -12,3 +12,7 @@ $box-shadow: 0 0.5rem 1rem rgba($black, 0.15) !default;
 $font-family: "Roboto", sans-serif;
 $border-color: rgb(124, 124, 124);
 $dangerColor: tomato;
+
+$card-shadow: 0 10px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
+$card-shadow-hover: 0 14px 28px rgba(0,0,0,0.25), 0 10px 10px rgba(0,0,0,0.22);
+$transition: all 0.5s ease-in-out;
