feature(view-delete-comments): Users should view and delete comment on travel request [Finishes  #168049955]

--- a/src/components/single-request/SingleRequest.scss
+++ b/src/components/single-request/SingleRequest.scss
@@ -29,6 +29,7 @@
 .content-container {
   @import url("https://fonts.googleapis.com/css?family=Raleway&display=swap");
   display: flex;
+  flex-direction: column;
   padding: 0;
   padding-bottom: 2rem;
   margin: 0 auto;
