--- a/src/components/side-bar/sidebar.scss
+++ b/src/components/side-bar/sidebar.scss
@@ -1,5 +1,4 @@
 @import "../../styles/variables";
-
 .side-bar {
   height: -webkit-fill-available;
   display: flex;
@@ -19,13 +18,14 @@
     color: white;
     box-shadow: none;
     .nav-header {
-      margin: 10px 0px 30px 0px;
+      margin: 10px 0px 10px 0px;
       font-weight: bold;
-      font-size: 1.2em;
+      font-size: 1em;
     }
     .nav-item {
-      margin: 10px 0px 10px 0px;
-      padding-left: 20px;
+      margin: 0px 0px -10px 0px;
+      font-size: 1em;
+      // padding-left: 20px;
       &:hover {
         color: $primaryColor;
         .sidebar-icons {
@@ -55,5 +55,5 @@
 .sidebar-icons {
   color: $background;
   margin-right: 10px;
-  font-size: 1.3em;
+  font-size: 1em;
 }
