feature(chat): Users should be able to chat on Barefoot Nomad [Start #168049979]

--- a/src/components/table/Table.scss
+++ b/src/components/table/Table.scss
@@ -114,7 +114,7 @@ a {
               @include dot();
             }
             .actions-dropdown-disabled {
-              position: relative;
+              // position: relative;
               display: inline-block;
               .drop-btn{
                 background-color: $textColor;
@@ -129,7 +129,7 @@ a {
               }
             }
             .actions-dropdown{
-              position: relative;
+              // position: relative;
               display: inline-block;
               &:hover{
                 .dropdown-content{
