--- a/src/components/profile-page/ProfilePage.scss
+++ b/src/components/profile-page/ProfilePage.scss
@@ -37,6 +37,7 @@ input#profileselector {
 .e-profile-content {
   margin: 2rem;
   display: grid;
+  margin-left: 12px;
   grid-template-columns: 1;
   //edit mode profile divided
   .profile-divider {
