--- a/src/components/side-bar/sidebar.scss
+++ b/src/components/side-bar/sidebar.scss
@@ -3,6 +3,7 @@
   height: -webkit-fill-available;
   display: flex;
   float: left;
+  margin-right: 10px;
   width: 20%;
   background: #404e67;
   color: $black;
