--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -1,6 +1,11 @@
 @import "../styles/variables";
+html {
+  font-size: 62.5%;
+}
+
 body {
   margin: 0;
+  font-size: 1.6rem;
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
     "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
     sans-serif;
@@ -19,9 +24,9 @@ code {
   left: 0;
   top: 0;
   width: 100%;
-  height: 100%; 
-  overflow: auto; 
-  background-color: rgb(0, 0, 0); 
+  height: 100%;
+  overflow: auto;
+  background-color: rgb(0, 0, 0);
   background-color: rgba(0, 0, 0, 0.4);
   font-family: source sans pro;
   .modal-content {
@@ -38,8 +43,8 @@ code {
       margin-bottom: 20px;
       border-radius: 50px 50px 0px 0px;
     }
-    .modal-elements{
-      .modal-element{
+    .modal-elements {
+      .modal-element {
         font-size: 1.5em;
       }
     }
@@ -53,7 +58,7 @@ code {
         text-decoration: none;
         cursor: pointer;
       }
-      &:focus{
+      &:focus {
         color: black;
         text-decoration: none;
         cursor: pointer;
@@ -61,7 +66,5 @@ code {
     }
   }
 }
-
-
 
 /*# sourceMappingURL=index.css.map */
