bug(fix-verify-pages): -access verify pages only on success  - fix notification pane scroll  - comment bug fix  - Link signin, login and password reset  - Refactor Ui [Finishes #169950165]

--- a/src/components/notification/notificationModal.scss
+++ b/src/components/notification/notificationModal.scss
@@ -7,8 +7,10 @@
   left: 70%;
   margin-right: 10%;
   border: 2px solid $primaryColor;
-  border-radius: 5%;
+  border-radius: 2%;
   height: fit-content;
+  max-height: 60%;
+  overflow: scroll;
   text-align: center;
   z-index: 20;
   background-color: $secondaryColor;
