--- a/src/components/navbar/navbar.scss
+++ b/src/components/navbar/navbar.scss
@@ -1,4 +1,14 @@
 $hoverColor: #2a89f5;
+* {
+  align-items: center;
+}
+.nav-logo{
+  height: 120px;
+  margin: 20px 0 0 20px;
+  background-color: lightgreen;
+  padding: 10px;
+  border-radius: 8px;
+}
 
 ul {
   list-style-type: none;
@@ -6,16 +16,9 @@ ul {
   padding: 0;
   padding-bottom: 10px;
   overflow: hidden;
-  background-color: white;
+  background-color:inherit;
   box-shadow: 2px 4px 8px 0px rgba(153, 153, 153, 0.5);
-
-  .left {
-    float: left;
-  }
-
-  .right {
-    float: right;
-  }
+  align-items: center;
 
   li a {
     display: block;
@@ -25,10 +28,10 @@ ul {
     text-decoration: none;
     border: 1px solid black;
     border-radius: 4px;
-    width: 80px;
+    width: fit-content;
     margin-right: 10px;
     margin-left: 20px;
-    margin-top: 10px;
+    margin-top: 20px;
 
     &:hover {
       color: white;
