--- a/src/components/table/PanelHeader.scss
+++ b/src/components/table/PanelHeader.scss
@@ -6,6 +6,9 @@
   width: 80vw;
   top: 6rem;
   right: 0;
+  @media screen and (max-width: 480px) {
+    margin-top: 50px;
+  }
   .page-info {
     position: absolute;
     left: 0;
@@ -28,7 +31,7 @@
     margin: 20px 20px 20px 0px;
     @media screen and (max-width: 480px) {
       float: left;
-      margin: 20px 0px 20px 60px;
+      margin: 90px 0px 20px 60px;
     }
     .panel-page-number {
       height: 40px;
@@ -99,5 +102,11 @@
     .panel-page-number {
       color: $background;
     }
+  }
+}
+.search-elements-responsive{
+  @media screen and (max-width: 480px) {
+    float: left;
+    margin: 120px 0px 20px 60px;
   }
 }
