chore(fix-homenav-sidebar): Making HomeNav and SideBar smart component - making HomeNav the only component to pull user Profile info - other components  read it from redux store - adds different fixes for broken sass styles [Finishes #170148172]

--- a/src/components/role-settings/RoleSettings.scss
+++ b/src/components/role-settings/RoleSettings.scss
@@ -90,8 +90,8 @@
   }
 }
 
-.select {
-  height: 2rem !important;
+.r-select {
+  height: 3rem !important;
   box-sizing: border-box;
   -webkit-appearance: none;
   -moz-appearance: none;
