--- a/src/components/profile-page/ProfilePage.scss
+++ b/src/components/profile-page/ProfilePage.scss
@@ -94,8 +94,8 @@ input#profileselector {
   }
 }
 
-.select {
-  height: 2rem !important;
+.p-select {
+  height: 3rem !important;
   box-sizing: border-box;
   -webkit-appearance: none;
   -moz-appearance: none;
