landing page fix
[Finish #169995342]

--- a/src/components/role-settings/RoleSettings.scss
+++ b/src/components/role-settings/RoleSettings.scss
@@ -11,6 +11,11 @@
   padding: 0.5rem;
   flex-direction: column;
   justify-content: center;
+  position: absolute;
+  top: 10rem;
+  right: 0;
+  width: 78vw;
+  
 }
 
 .role-setting {
