--- a/src/components/form/form.scss
+++ b/src/components/form/form.scss
@@ -12,15 +12,18 @@ $hoverColor: #2a89f5;
 
 .card-container {
   text-align: center;
+  margin: auto;
 
   .card {
-    background-color: yellowgreen;
     display: inline-block;
     margin: 50px 0px 10px 0px;
     background-color: white;
     border-radius: 8px;
     width: 320px;
     height: auto;
+    &--login {
+      background-color: rgba(white, .9) !important;
+    }
   }
 
   .title {
