--- a/src/components/side-bar/sidebar.scss
+++ b/src/components/side-bar/sidebar.scss
@@ -17,6 +17,7 @@
     margin-top: 0rem!important;
   }
   .main-nav {
+    list-style-type: none !important;
     background-color: inherit;
     width: 100%;
     padding: 20px 10px 0px 20px;
@@ -30,7 +31,7 @@
       font-size: 1em;
     }
     .nav-item {
-      margin: 0px 0px -10px 0px;
+      margin: 10px 0px 10px 0px;
       font-size: 1em;
       // padding-left: 20px;
       &:hover {
