bug(token): Fix wrong token issue [Start #170147517]

--- a/src/components/table/PanelHeader.scss
+++ b/src/components/table/PanelHeader.scss
@@ -9,6 +9,9 @@
   @media screen and (max-width: 480px) {
     margin-top: 50px;
   }
+  @media screen and (max-width: 1000px) {
+    margin-top: 50px;
+  }
   .page-info {
     position: absolute;
     left: 0;
@@ -32,6 +35,11 @@
     @media screen and (max-width: 480px) {
       float: left;
       margin: 90px 0px 20px 60px;
+    }
+    @media screen and (max-width: 1000px) {
+      float: left;
+      margin: 90px 0px 20px 60px;
+      left: 0;
     }
     .panel-page-number {
       height: 40px;
@@ -89,6 +97,9 @@
   @media screen and (max-width: 480px) {
     display: none;
   }
+  @media screen and (max-width: 1000px) {
+    display: none;
+  }
 }
 .search-button {
   background-color: black;
@@ -108,5 +119,11 @@
   @media screen and (max-width: 480px) {
     float: left;
     margin: 120px 0px 20px 60px;
+  }
+  @media screen and (max-width: 1000px) {
+    float: left;
+    margin: 120px 0px 20px 60px;
+    left: 0;
+    width: 30%!important;
   }
 }
