bg(fix-crash): fix crash when making a request for the first time with auto fill [Start #170234721]

--- a/src/components/single-request/SingleRequest.scss
+++ b/src/components/single-request/SingleRequest.scss
@@ -184,7 +184,7 @@
 
   p {
     text-align: center;
-    font-size: 1rem;
+    font-size: 1.7rem !important;
     font-weight: bold;
     padding-top: 0.7rem;
     margin: 0;
