--- a/src/components/notification/notificationModal.scss
+++ b/src/components/notification/notificationModal.scss
@@ -9,7 +9,8 @@
   border: 2px solid $primaryColor;
   border-radius: 2%;
   text-align: center;
-  height: 60%;
+  height: 450px;
+  max-height:fit-content;
   z-index: 20;
   background-color: $secondaryColor;
   width: 25%;
@@ -42,8 +43,7 @@
 }
 .modal-body {
   padding: 10px 15px;
-  height: fit-content;
-  max-height: 90%;
+  height: 85%;
   overflow: scroll;
 }
 .modal-over-lay {
